static/style.css
body {
  margin: 0px;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
}

.universe {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

@media (min-width: 576px) {
  .box {
    margin-top: 88px;
    width: 400px;
  }
}

@media (max-width: 576px) {
  .box {
    width: 99vw;
  }
}

.b1 {
  border-style: solid;
  border-width: 1px;
  border-color: gray;
}

#board-img {
  display: block;
  width: 100%;
}

canvas {
  display: none;
}

input {
  border-style: solid;
}

img {
  background-color: #D8D8D8;
}

.m4 {
  margin: 4px;
}

.vct {
  display: flex;
  align-items: center;
}

.lat {
  display: flex;
  justify-content: flex-start;
}

.rat {
  display: flex;
  justify-content: flex-end;
}

.flex {
  display: flex;
}

.justify-content-center {
  justify-content: center;
}

.justify-content-between {
  justify-content: space-between;
}

#my-name-input {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 94px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

#my-name {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100px;
  display: none; /* changes to flex when name is entered by client */
  justify-content: flex-start;
  align-items: center;
}

#their-name {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.timer {
  font-family: "Lucida Console", Monaco, monospace;
  font-size: 10pt;
}

.sq {
  width: 20px;
  height: 20px;
  background-color: #D8D8D8;
}

